# ValEngine

./: README.md  main.py  market_tester.py  pyproject.toml  test_sec_fetch.py  testecon.py  tester.csv  testwrite.py
app/: econ_ind.py  main.py
config/: settings.yaml
ingestion/: pipeline.py
ingestion/market/: market_fetcher.py
ingestion/sec/: cik_lookup.py  fetch_ticker_file.py  normalizer.py  sec_fetcher.py
ingestion/writer/: write_csv.py  write_processed.py
powerbi/: ValEngine.pbix
valuation/: engine.py
