[project]
name = "valuation-engine"
version = "0.1.0"
description = "Automated SEC-driven valuation engine with Streamlit front end and Power BI integration"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "duckdb>=1.5.0",
    "fredapi>=0.5.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "yfinance>=1.2.0",
    "pyarrow>=17.0.0",
    "pydantic>=2.7.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "beautifulsoup4>=4.12.3",
]

[tool.uv]
dev-dependencies = ["pytest"]
